# SlimEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: SlimEngine.h  bmp2texture.c  obj2mesh.c
src/SlimEngine/: app.h
src/SlimEngine/core/: base.h  controls.h  init.h  memory.h  pixels.h  string.h  text.h  time.h  types.h
src/SlimEngine/math/: mat2.h  mat3.h  mat4.h  math2D.h  math3D.h  math4D.h  quat.h  vec2.h  vec3.h  vec4.h
src/SlimEngine/renderer/: common.h  mesh_shaders.h  pixel_shaders.h  rasterizer.h
src/SlimEngine/scene/: box.h  camera.h  cube.h  curve.h  grid.h  io.h  mesh.h  primitive.h  scene.h  texture.h  xform.h
src/SlimEngine/shapes/: box.h  circle.h  coil.h  curve.h  edge.h  grid.h  helix.h  line.h  rect.h  triangle.h
src/SlimEngine/viewport/: hud.h  manipulation.h  navigation.h  viewport.h
src/examples/: 1_curves.c  1_scene.c  1_shapes.c  1_viewport.c  2_navigation.c  3_cameras.c  3_scene.c  4_manipulation.c  4_scene.c  4_shapes.c  5_manipulation.c  6_mesh.c  6_meshes.c  7_scene.c  8_rasterization.c  _common.h  dog.mesh  dragon.mesh  projective.c  projective_arrow.h  projective_base.h  projective_locator.h  projective_matrix.h  projective_process.h  projective_space.h  projective_transition.h  suzanne.mesh  this.scene
src/examples/visualizations/: arrow.h  core.h  locator.h  matrix.h  perspective_projection.c  projection_matrix.h  projective.c  projective_arrow.h  projective_base.h  projective_locator.h  projective_matrix.h  projective_process.h  projective_space.h  projective_transition.h  transition.h
