cmake_minimum_required(VERSION 3.8)

project(SlimEngine_1_viewport)
add_executable(SlimEngine_1_viewport WIN32 src/examples/1_viewport.c)

project(SlimEngine_2_navigation)
add_executable(SlimEngine_2_navigation WIN32 src/examples/2_navigation.c)

project(SlimEngine_3_cameras)
add_executable(SlimEngine_3_cameras WIN32 src/examples/3_cameras.c)

project(SlimEngine_4_scene)
add_executable(SlimEngine_4_scene WIN32 src/examples/4_scene.c)

project(SlimEngine_5_manipulation)
add_executable(SlimEngine_5_manipulation WIN32 src/examples/5_manipulation.c)